NewFlameHM/force-app/main/default/objects/Attendance_Booking__c/Attendance_Booking__c.object-meta.xml
<CustomObject>
    <label>Attendance Booking</label>
    <nameField>
        <displayFormat>AB-{0000}</displayFormat>
        <label>Attendance Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>