NewFlameHM/force-app/main/default/objects/Attendance_Booking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>AttendanceFeedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>