NewFlameHM/force-app/main/default/objects/Attendance_Booking__c/fields/Feedback_Category__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Category__c</fullName>
    <label>Feedback Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>