NewFlameHM/force-app/main/default/objects/Attendance_Booking__c/fields/Is_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Is_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Opt Out?</label>
    <type>Checkbox</type>
</CustomField>