NewFlameHM/force-app/main/default/objects/Attendance_Booking__c/fields/Is_PreBooked__c.field-meta.xml
<CustomField>
    <fullName>Is_PreBooked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PreBooked?</label>
    <type>Checkbox</type>
</CustomField>