NewFlameHM/force-app/main/default/objects/Attendance_Booking__c/fields/Is_Visitor__c.field-meta.xml
<CustomField>
    <fullName>Is_Visitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Visitor?</label>
    <type>Checkbox</type>
</CustomField>