NewFlameHM/force-app/main/default/objects/Attendance_Booking__c/fields/isFeedbackSubmitted__c.field-meta.xml
<CustomField>
    <fullName>isFeedbackSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFeedbackSubmitted</label>
    <type>Checkbox</type>
</CustomField>