NewFlameHM/force-app/main/default/objects/Attendance_Booking__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Menu_Item__c</referenceTo>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>