NewFlameHM/force-app/main/default/objects/Attendance_Booking__c/fields/Item_Group__c.field-meta.xml
<CustomField>
    <fullName>Item_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Group</label>
    <referenceTo>Item_Group__c</referenceTo>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>