NewFlameHM/force-app/main/default/objects/Attendance_Booking__c/fields/ItemFeedback__c.field-meta.xml
<CustomField>
    <fullName>ItemFeedback__c</fullName>
    <label>ItemFeedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>