NewFlameHM/force-app/main/default/objects/Attendance_Booking__c/fields/Meal_Availed__c.field-meta.xml
<CustomField>
    <fullName>Meal_Availed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meal Availed</label>
    <type>Checkbox</type>
</CustomField>