NewFlameHM/force-app/main/default/objects/Attendance_Booking__c/fields/Menu__c.field-meta.xml
<CustomField>
    <fullName>Menu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Menu</label>
    <referenceTo>Menu__c</referenceTo>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>