NewFlameHM/force-app/main/default/objects/Attendance_Booking__c/fields/Menu_Order__c.field-meta.xml
<CustomField>
    <fullName>Menu_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Menu Order</label>
    <referenceTo>Menu_Order__c</referenceTo>
    <relationshipName>AttendanceFeedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>