NewFlameHM/force-app/main/default/objects/Attendance_Booking__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Give Rating between 1 to 5</description>
    <inlineHelpText>Give Rating between 1 to 5</inlineHelpText>
    <label>Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>