NewFlameHM/force-app/main/default/objects/Attendance_Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item_Group__c</columns>
    <columns>Item__c</columns>
    <columns>Rating__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>